...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="hW4-pb-8TH">
            <objects>
                <windowController id="RHq-9Z-auA" customClass="OneWindowController" customModule="Clocker" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Juk-wd-881">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="245" y="301" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                        <accessibility identifier="Clocker"/>
...
                                                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="564-Re-f1d">
                                                                    <font key="font" size="12" name="Avenir-Light"/>
                                                                    <segments>
                                                                        <segment label="Relative" width="60"/>
                                                                        <segment label="Actual" width="60" selected="YES" tag="1"/>
                                                                        <segment label="Date in mmm/dd"/>
                                                                        <segment label="Hide"/>
                                                                    </segments>
                                                                </segmentedCell>
                                                                <connections>
                                                                    <action selector="changeRelativeDayDisplay:" target="1aL-zR-8L4" id="ziY-tK-Wgr"/>
                                                                    <binding destination="Gpv-Gr-MxZ" name="selectedIndex" keyPath="values.relativeDate" id="KQP-ft-dxC"/>
                                                                </connections>
...
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="186" id="GFp-Fx-5i3"/>
                                                    </constraints>
                                                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="jUA-fY-nhn">
                                                        <font key="font" size="12" name="Avenir-Light"/>
                                                        <segments>
                                                            <segment label="Show" width="71"/>
                                                            <segment label="Hide" width="71" selected="YES" tag="1"/>
                                                        </segments>
                                                    </segmentedCell>
                                                    <accessibility identifier="FutureSlider"/>
                                                    <connections>
                                                        <action selector="showFutureSlider:" target="1aL-zR-8L4" id="c1a-KS-oo3"/>
                                                        <binding destination="Gpv-Gr-MxZ" name="selectedIndex" keyPath="values.displayFutureSlider" id="ha9-nW-Rv2"/>
                                                    </connections>
                                                </segmentedControl>
                                                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8Nx-Xq-XDU">
...
</string>
                                </buttonCell>
                                <constraints>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="80" id="Ikc-5C-yOA"/>
                                    <constraint firstAttribute="height" constant="20" id="TRi-p5-6gR"/>
                                </constraints>
                                <accessibility identifier="AddAvailableTimezone"/>
                                <connections>
                                    <action selector="addToFavorites:" target="ZT5-cA-xLj" id="GAu-wJ-aEf"/>
                                </connections>
                            </button>
                            <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="32" horizontalPageScroll="10" verticalLineScroll="32" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wY-ff-FLW">
                                <rect key="frame" x="8" y="30" width="320" height="237"/>
...
                                </constraints>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" alignment="center" placeholderString="" id="1Vu-Q1-5Mk">
                                    <font key="font" size="13" name="Avenir-Light"/>
                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility identifier="ErrorPlaceholder"/>
                            </textField>
                        </subviews>
                        <constraints>
                            <constraint firstItem="0wY-ff-FLW" firstAttribute="top" secondItem="Dha-h9-Nd0" secondAttribute="bottom" constant="10" id="4pP-iK-ocx"/>
                            <constraint firstAttribute="trailing" secondItem="Dha-h9-Nd0" secondAttribute="trailing" constant="8" id="58h-kG-FMP"/>
                            <constraint firstItem="Dha-h9-Nd0" firstAttribute="leading" secondItem="MAe-t5-3A2" secondAttribute="leading" constant="8" id="7pJ-se-0dL"/>
...
                                                    <font key="font" metaFont="system" size="22"/>
                                                </buttonCell>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="40" id="TJZ-Zv-ft0"/>
                                                    <constraint firstAttribute="height" constant="40" id="sK8-9i-bBo"/>
                                                </constraints>
                                                <accessibility identifier="AddTimezone"/>
                                                <connections>
                                                    <action selector="addTimeZone:" target="ZT5-cA-xLj" id="FMa-3W-muR"/>
                                                </connections>
                                            </button>
                                            <button toolTip="Remove a timezone" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="48a-Zz-oQg">
                                                <rect key="frame" x="41" y="6" width="40" height="40"/>
...
