...
        timeFormatControl.item(at: 9)?.isEnabled = false
        timeFormatControl.autoenablesItems = false
        timeFormatControl.selectItem(at: convertOverrideFormatToPopupControlSelection())

        // Set Accessibility Identifiers for UI tests
        customLabel.setAccessibilityIdentifier("CustomLabel")
        saveButton.setAccessibilityIdentifier("SaveButton")
        notesTextView.setAccessibilityIdentifier("NotesTextView")
        setReminderCheckbox.setAccessibilityIdentifier("ReminderCheckbox")
        alertPopupButton.setAccessibilityIdentifier("RemindersAlertPopup")
        reminderView.setAccessibilityIdentifier("RemindersView")

        if #available(OSX 11.0, *) {
            alertPopupButton.controlSize = .large
        }
...
