// Copyright © 2015–2026 Adrak Studio LLC

import Cocoa

public enum ResultStatus {
    public static let okay = "OK"
    public static let zeroResults = "ZERO_RESULTS"
    public static let requestDenied = "REQUEST_DENIED"
}

public struct SearchResult: Codable {
    public let results: [Result]
...
