...
        mainTableView.registerForDraggedTypes([.dragSession])

        reviewView.isHidden = !showReviewCell

        reviewView.layer?.backgroundColor = Themer.shared().mainBackgroundColor().cgColor

        mainTableView.setAccessibility("FloatingTableView")
    }

    override func updatePanelColor() {
        super.updatePanelColor()
        updateTheme()
    }
...
