...
        if let pinImage = symbolImage(for: "macwindow.on.rectangle") {
            return pinImage
        }
        
        return fallbackImageProvider(NSImage(named: NSImage.Name("Float"))!,
                                     NSImage(named: NSImage.Name("Float-White"))!,
                                     NSImage(named: NSImage.Name("Pin"))!,
                                     NSImage(named: NSImage.Name("Float"))!,
                                     NSImage(named: NSImage.Name("Float-White"))!)
    }
    
    func sunriseImage() -> NSImage {
        if let symbolImage = symbolImage(for: "sunrise.fill") {
...
